# stateset-agents

./: .bandit  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_USAGE_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENHANCEMENTS_SUMMARY.md  FRAMEWORK_10_OUT_OF_10.md  FRAMEWORK_OVERVIEW.md  FRAMEWORK_RATING_10.md  GRPO_COMPLETION_SUMMARY.md  GRPO_FRAMEWORK_ENHANCEMENTS_v2.md  GRPO_FRAMEWORK_ENHANCEMENTS_v4.md  GRPO_IMPLEMENTATION.md  GYM_INTEGRATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_TO_10.md  INNOVATION_MIGRATION_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  Makefile  OVERVIEW.md  QUICKSTART.md  QUICKSTART_10_10.md  README.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  TRL_GRPO_TRAINING_GUIDE.md  UNIFIED_SENTIMENT_SETUP.md  (+15 more)
.autoresearch/: results.tsv  session.json
.github/: codeql-config.yml  dependabot.yml  dependency-review-config.yml
api/: __init__.py  auth.py  cache.py  config.py  constants.py  dependencies.py  distributed_cache.py  enhanced_api_service.py  enhanced_grpo_gateway.py  enhanced_ultimate_grpo_service.py  errors.py  logging_config.py  main.py  middleware.py  models.py  observability.py  openapi.py  persistence.py  resilience.py  schemas.py  security.py  shutdown.py  streaming.py  ultimate_grpo_service.py  versioning.py
benchmark_results/: benchmark_summary.json
benchmarks/: README.md  algorithm_comparison.py  autoresearch_eval.py  benchmark_suite.py  framework_comparison.py  performance_benchmarks.py  real_performance_benchmarks.py
core/: __init__.py  adaptive_learning_controller.py  advanced_monitoring.py  agent.py  agent_backends.py  async_pool.py  basic_rewards.py  computational_engine.py  curriculum_learning.py  data_processing.py  domain_rewards.py  enhanced_state_management.py  environment.py  error_handling.py  evaluation.py  few_shot_adaptation.py  function_calling.py  gspo_engine.py  input_validation.py  intelligent_orchestrator.py  memory.py  multi_agent_coordination.py  multimodal_processing.py  multiturn_agent.py  neural_architecture_search.py  performance_optimizer.py  reward.py  reward_base.py  reward_factories.py  rust_accelerator.py  structured_output.py  trajectory.py  type_system.py  types.py  value_function.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
deployment/: README.md  runpod_deployment.py
docs/: 10_OUT_OF_10.md  ADVANCED_FEATURES_GUIDE.md  ADVANCED_RL_ALGORITHMS.md  API_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  AUTO_RESEARCH_GUIDE.md  BENCHMARKS.md  CLI_REFERENCE.md  CLOUD_DEPLOYMENT.md  COMPARISONS.md  COMPARISON_LLM_FRAMEWORKS.md  COMPARISON_TRADITIONAL_RL.md  COMPARISON_TRL.md  COMPREHENSIVE_USAGE_GUIDE.md  DEVELOPMENT.md  ENHANCED_FRAMEWORK_README.md  FRAMEWORK_ENHANCEMENT_SUMMARY.md  FRAMEWORK_OVERVIEW.md  GEMMA3_FINETUNING_GUIDE.md  GLM5_1_HOSTING_PLAN.md  GOVERNANCE.md  GRPO_FRAMEWORK_ENHANCEMENTS_v2.md  GRPO_FRAMEWORK_ENHANCEMENTS_v4.md  GRPO_IMPLEMENTATION.md  GSPO_GUIDE.md  HPO_GUIDE.md  IMPROVEMENTS_TO_10.md  KIMIK25_INTEGRATION.md  KIMI_K25_GKE_AUTOPILOT.md  KIMI_K25_GKE_STANDARD.md  MEMORY_REQUIREMENTS_GUIDE.md  MIGRATION_GRPO_TO_GSPO.md  MIGRATION_GUIDE.md  OFFLINE_RL_SIM_TO_REAL_GUIDE.md  PERFORMANCE_TUNING_GUIDE.md  PUBLISHING_SETUP.md  QUICKSTART_5MIN.md  QWEN3_5_27B_MINIMAL_HOSTING_PLAN.md  (+35 more)
examples/: ADVANCED_TRAINING_README.md  API_EXAMPLES_README.md  KIMI_K25_INTEGRATION.md  README.md  __init__.py  advanced_features_demo.py  advanced_optimization_techniques.py  api_client_example.py  api_client_simple.py  auto_research.py  auto_research_config.yaml  auto_research_quickstart.py  backend_switch_demo.py  complete_grpo_training.py  comprehensive_grpo_framework_demo.py  comprehensive_gspo_demo.py  continual_learning_planning.py  custom_math_env.py  custom_reward_functions.py  customer_service_agent.py  distributed_multi_gpu_training.py  enhanced_customer_service.py  enhanced_framework_demo.py  enhanced_framework_showcase.py  enhanced_grpo_demo.py  finetune_code_assistant.py  finetune_gemma3_gspo.py  finetune_gemma4_31b_gspo.py  finetune_glm5_1_gspo.py  finetune_kimi_k25_gspo.py  finetune_kimi_k2_5_gspo.py  finetune_kimi_k2_6_gspo.py  finetune_llama3_gspo.py  finetune_mistral_gspo.py  finetune_qwen3_5_0_8b_gspo.py  finetune_qwen3_5_27b_gspo.py  finetune_qwen3_gspo.py  gemma4_config.py  glm5_1_config.py  grpo_showcase.py  (+23 more)
grpo_agent_framework/: __init__.py
grpo_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mobile/: app.json  expo-env.d.ts  package-lock.json  package.json
notebooks/: 00_environment_setup.ipynb  01_qwen_support_agent_gspo.ipynb  02_qwen_sales_agent_gspo.ipynb  README.md
rewards/: REWARD_SYSTEM_ANALYSIS.md  __init__.py  bayesian_reward_model.py  kimi_k25_reward.py  llm_judge.py  llm_reward.py  multi_objective_reward.py  ruler_reward.py
rust_core/: Cargo.toml  README.md
rust_core/src/: advantage.rs  gae.rs  lib.rs  rewards.rs  trajectory.rs
scripts/: benchmark.py  check_repo_hygiene.py  check_types.py  k8s_cost_report.py  publish.py  publish_readiness.sh  quick_publish.sh  render_glm5_1_helm_values.py  render_kimi_k25_helm_values.py  render_qwen3_5_27b_helm_values.py  train_trl_grpo.sh
src/: lib.rs  main.rs
stateset_agents/: __init__.py  __init__.py.backup  cli.py  cli_advanced.py  exceptions.py
stubs/: __init__.py  datasets.pyi  torch.pyi  transformers.pyi
tests/: __init__.py  conftest.py  test_comprehensive.py  test_enhanced_features.py  test_kimi_k25_integration.py
training/: __init__.py  advanced_training_orchestrator.py  base_trainer.py  config.py  dapo_trainer.py  diagnostics.py  distributed.py  distributed_trainer.py  ema.py  gepo_trainer.py  gspo_token_trainer.py  gspo_trainer.py  kl_controllers.py  loss_computation.py  multi_turn_trainer.py  neural_reward_trainer.py  offline_rl_algorithms.py  ppo_trainer.py  reward_calibration.py  rlaif_trainer.py  single_turn_trainer.py  train.py  trainer.py  (+5 more)
(+645 files in other folders)
