[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateset-agents"
version = "0.9.0"
description = "Production-ready RL framework for training multi-turn conversational AI agents using GRPO and GSPO"
readme = "README.md"
license = "BUSL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "StateSet Team", email = "team@stateset.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
    "tqdm>=4.65.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "semgrep>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "wandb>=0.15.0",
    "peft>=0.4.0",
    "trl>=0.7.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0,<0.28.0",
    "requests>=2.31.0",
]
training = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "wandb>=0.15.0",
    "peft>=0.4.0",
    "trl>=0.7.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "gymnasium>=0.28.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    # Starlette/FastAPI's TestClient is not compatible with httpx>=0.28 yet.
    "httpx>=0.25.0,<0.28.0",
    # Used by performance monitoring endpoints.
    "psutil>=5.9.0",
    # Used by alerting integrations.
    "requests>=2.31.0",
]
examples = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "langchain>=0.1.0",
]
trl = [
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
]
vllm = [
    "vllm>=0.3.0",
]
hpo = [
    "optuna>=3.0.0",
    "ray[tune]>=2.0.0",
]
auto-research = [
    "stateset-agents[training]",
    "optuna>=3.0.0",
    "pyyaml>=6.0",
]
auto-research-llm = [
    "stateset-agents[auto-research]",
    "anthropic>=0.5.0",
    "openai>=1.0.0",
]
distributed = [
    "deepspeed>=0.9.0",
]
full = [
    "stateset-agents[training,api,hpo,auto-research]",
]

[project.urls]
Homepage = "https://github.com/stateset/stateset-agents"
Repository = "https://github.com/stateset/stateset-agents"
Documentation = "https://stateset-agents.readthedocs.io/"
Issues = "https://github.com/stateset/stateset-agents/issues"

[project.scripts]
stateset-agents = "stateset_agents.cli:run"

# Setuptools package discovery
[tool.setuptools.packages.find]
include = [
    "stateset_agents*",
]
exclude = [
    "tests*",
    "docs*",
    "benchmarks*",
    "scripts*",
    "htmlcov*",
    "dist*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stateset_agents" = ["py.typed"]


# Black configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["stateset_agents"]
known_third_party = ["torch", "transformers", "datasets", "numpy", "wandb"]

# Coverage configuration
[tool.coverage.run]
source = ["stateset_agents"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

# Ruff configuration (fast Python linter)
[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["*.ipynb"]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"stateset_agents/core/advanced_monitoring.py" = ["E402"]
"stateset_agents/core/agent.py" = ["E402"]
"stateset_agents/training/dapo_trainer.py" = ["E402"]
"stateset_agents/training/gspo_trainer.py" = ["E402"]
"stateset_agents/training/train.py" = ["E402"]
"stateset_agents/training/trl_grpo_trainer.py" = ["E402"]
"stateset_agents/training/vapo_trainer.py" = ["E402"]
"stateset_agents/utils/wandb_integration.py" = ["E402"]
"tests/**/*" = ["B011"]  # assert false
"tests/unit/test_trl_grpo_trainer.py" = ["E402"]
